fix: notif overlapped issue

--- a/alchemy-20-front/components/Subpage Template/Subpage.module.css
+++ b/alchemy-20-front/components/Subpage Template/Subpage.module.css
@@ -5,6 +5,7 @@
   background: rgba(26, 26, 26, 0.4);
   height: 70px;
   top: 0;
+  z-index: 2;
 }
 
 .top_logo:hover {
