--- a/alchemy-20-front/styles/Dashboard.module.css
+++ b/alchemy-20-front/styles/Dashboard.module.css
@@ -19,7 +19,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: #303030;
     padding-top: 20px;
     padding-bottom: 20px;
     position: relative;
